--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ background:#fff;z-index:1500;font-family:sans-serif;">
     <!-- Gallery View -->
     <div class="collage" id="galleryView">
       <div class="collage-item" data-title="" data-text="asdadas" data-img="/imgs/IMG_9715.jpg">
-        <img src="/imgs/IMG_9715.jpg" alt="Coffee cups">
+        <img src="imgs/IMG_9715.jpg" alt="Coffee cups">
         <div class="caption">The first boba</div>
       </div>
       <div class="collage-item" data-title="The long walk 🚶‍♀️❄️" data-text="It was sooo cold. You warmed my hands in yours and called it ‘science.’ Cutest science ever. 🥰" data-img="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?q=80&w=1400&auto=format&fit=crop">
@@ -320,11 +320,11 @@ background:#fff;z-index:1500;font-family:sans-serif;">
       </div>
 
             <div class="collage-item" data-title="Picnic in the park 🌸" data-text="A sunny day with food and smiles." data-img="https://images.unsplash.com/photo-1500534314209-a25dbff4d9f8?q=80&w=1400&auto=format&fit=crop">
-        <img src="/imgs/car.jpg" alt="Picnic">
+        <img src="imgs/car.jpg" alt="Picnic">
         <div class="caption">Drive to MK</div>
       </div>
                         <div class="collage-item" data-title="Picnic in the park 🌸" data-text="A sunny day with food and smiles." data-img="https://images.unsplash.com/photo-1500534314209-a25dbff4d9f8?q=80&w=1400&auto=format&fit=crop">
-        <img src="/imgs/accom.jpg" alt="Picnic">
+        <img src="imgs/accom.jpg" alt="Picnic">
         <div class="caption">Accomodation Hunting</div>
       </div>
       
@@ -333,7 +333,7 @@ background:#fff;z-index:1500;font-family:sans-serif;">
         <div class="caption">asdasdasdasd</div>
       </div> -->
  <div class="collage-item" data-title="Sunset 🌅" data-text="Golden hour" data-img="/imgs/sunset.jpg">
-    <img src="/imgs/toddey.jpg" alt="Sunset">
+    <img src="imgs/toddey.jpg" alt="Sunset">
     <div class="caption">TOADY</div>
   </div>
                <div class="collage-item" data-title="Cute video moment 🎥" data-text="A short clip of us laughing together." data-img="https://www.w3schools.com/html/mov_bbb.mp4" data-video>
@@ -350,7 +350,7 @@ background:#fff;z-index:1500;font-family:sans-serif;">
       </div>
 
   <div class="collage-item" data-title="Sunset 🌅" data-text="Golden hour" data-img="/imgs/sunset.jpg">
-    <img src="/imgs/easy.png" alt="Sunset">
+    <img src="imgs/easy.png" alt="Sunset">
     <div class="caption">Smoked</div>
   </div>
 
@@ -358,11 +358,11 @@ background:#fff;z-index:1500;font-family:sans-serif;">
 
 
          <div class="collage-item" data-title="Sunset 🌅" data-text="Golden hour" data-img="/imgs/sunset.jpg">
-    <img src="/imgs/gift.jpg" alt="Sunset">
+    <img src="imgs/gift.jpg" alt="Sunset">
     <div class="caption">Gifts</div>
   </div>
      <div class="collage-item" data-title="Sunset 🌅" data-text="Golden hour" data-img="/imgs/sunset.jpg">
-    <img src="/imgs/dis.png" alt="Sunset">
+    <img src="imgs/dis.png" alt="Sunset">
     <div class="caption">Funny</div>
   </div>
                <div class="collage-item" data-title="Cute video moment 🎥" data-text="A short clip of us laughing together." data-img="https://www.w3schools.com/html/mov_bbb.mp4" data-video>
@@ -371,42 +371,42 @@ background:#fff;z-index:1500;font-family:sans-serif;">
       </div>
 
      <div class="collage-item" data-title="Sunset 🌅" data-text="Golden hour" data-img="/imgs/sunset.jpg">
-    <img src="/imgs/pool.png" alt="Sunset">
+    <img src="imgs/pool.png" alt="Sunset">
     <div class="caption">Smoked Me On Pool</div>
   </div>
 
        <div class="collage-item" data-title="Sunset 🌅" data-text="Golden hour" data-img="/imgs/sunset.jpg">
-    <img src="/imgs/scam.png" alt="Sunset">
+    <img src="imgs/scam.png" alt="Sunset">
     <div class="caption">Get Hacked</div>
   </div>
 
        <div class="collage-item" data-title="Sunset 🌅" data-text="Golden hour" data-img="/imgs/sunset.jpg">
-    <img src="/imgs/proi.jpg" alt="Sunset">
+    <img src="imgs/proi.jpg" alt="Sunset">
     <div class="caption">P Plate Driver</div>
   </div>
 
        <div class="collage-item" data-title="Sunset 🌅" data-text="Golden hour" data-img="/imgs/sunset.jpg">
-    <img src="/imgs/laneige.jpg" alt="Sunset">
+    <img src="imgs/laneige.jpg" alt="Sunset">
     <div class="caption">My Laneige</div>
   </div>
 
        <div class="collage-item" data-title="Sunset 🌅" data-text="Golden hour" data-img="/imgs/sunset.jpg">
-    <img src="/imgs/hanwoo.jpg" alt="Sunset">
+    <img src="imgs/hanwoo.jpg" alt="Sunset">
     <div class="caption">HANWOOOOO</div>
   </div>
 
        <div class="collage-item" data-title="Sunset 🌅" data-text="Golden hour" data-img="/imgs/sunset.jpg">
-    <img src="/imgs/dumplings.jpg" alt="Sunset">
+    <img src="imgs/dumplings.jpg" alt="Sunset">
     <div class="caption">Dumplings</div>
   </div>
 
        <div class="collage-item" data-title="Sunset 🌅" data-text="Golden hour" data-img="/imgs/sunset.jpg">
-    <img src="/imgs/flowers.jpg" alt="Sunset">
+    <img src="imgs/flowers.jpg" alt="Sunset">
     <div class="caption">Pretty Flowers For A Pretty Girl</div>
   </div>
 
        <div class="collage-item" data-title="Sunset 🌅" data-text="Golden hour" data-img="/imgs/sunset.jpg">
-    <img src="/imgs/hotpot.jpg" alt="Sunset">
+    <img src="imgs/hotpot.jpg" alt="Sunset">
     <div class="caption">HOT POT!</div>
   </div>
 
