--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ background:#fff;z-index:1500;font-family:sans-serif;">
       </div>
 
             <div class="collage-item" data-title="Picnic in the park 🌸" data-text="A sunny day with food and smiles." data-img="https://images.unsplash.com/photo-1500534314209-a25dbff4d9f8?q=80&w=1400&auto=format&fit=crop">
-        <img src="imgs/car.jpg" alt="Picnic">
+        <img src="imgs/CAR.jpg" alt="Picnic">
         <div class="caption">Drive to MK</div>
       </div>
                         <div class="collage-item" data-title="Picnic in the park 🌸" data-text="A sunny day with food and smiles." data-img="https://images.unsplash.com/photo-1500534314209-a25dbff4d9f8?q=80&w=1400&auto=format&fit=crop">
